@startuml

title __SRC's Class Diagram__\n

  package  {
    class Circle {
        - circleRadius : double
        + Circle()
        + calculateArea()
    }
  }
  

  package  {
    abstract class Figure {
        - name : String
        - area : double
        + getArea()
        + setArea()
        + Figure()
        {abstract} + calculateArea()
    }
  }
  

  package  {
    class Program {
        {static} + main()
        {static} + calculateFigureArea()
    }
  }
  

  package  {
    class Rectangle {
        # lengthOfFirstSideOfRectangle : double
        # lengthOfSecondSideOfRectangle : double
        + Rectangle()
        + calculateArea()
    }
  }
  

  package  {
    class Square {
        + Square()
        + calculateArea()
    }
  }
  

  package  {
    class Triangle {
        - lengthOfBaseOfTriangle : double
        - heightOfTriangle : double
        + Triangle()
        + calculateArea()
    }
  }
  

  Circle -up-|> Figure
  Rectangle -up-|> Figure
  Square -up-|> Rectangle
  Triangle -up-|> Figure


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
